# carSteeringAlgorithm

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  code-of-conduct.md  manifest.json  repositories
16546748a5057b9d8fecf8d146954fdb0e2ad443acdf73eb776aea12eb8b8e8d/: json
2a099669b75e76dc432d28a80f5325bac11f64eb64e49fc7a874052f71947f3b/: json  layer.tar
64ee9526e2b6019ab9d61800601b4ff477fb7f7e6df20741cb2720886c7da34e/: json  layer.tar
a514b8e33bd194200e62e981fa0e9bb3c13c6cd04ff82e91f3e8f11bd4f3500c/: json
ca00c330587678e46fabf95ff50e16d9cc64bc0de5fc684694ac5266c39f69e6/: json  layer.tar
cpp/: .gitignore  Makefile  README.md  printContentFromRecFile.cpp
cpp-opencv/src/: template-opencv.cpp
d3bc4608f672143c84e7f1e0db9a00e5067213562f22fcd5b601a920d23859a2/: json  layer.tar
python3/: .gitignore  Makefile  README.md  example.odvd  opendlv-standard-message-set-v0.9.9.odvd  printContentFromRecFile.py  printContentFromTCP.py
source_code/: CID-140-recording-2020-03-18_144821-selection.rec  CMakeLists.txt  Dockerfile  PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  helloworld  helloworld.cpp  runner  template-opencv.cpp
source_code/src/: steering-service.cpp  template-opencv.cpp
